RenameCollectionCoordinator wrongly releases critical section for destination ns.

XMLWordPrintableJSON

    • Sharding EMEA
    • Fully Compatible
    • ALL
    • v6.3, v6.0, v5.0
    • Sharding EMEA 2023-02-20
    • 135
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      RenameCollectionCoordinator acquires the critical section for the destination ns if it is not sharded. Later, it releases the critical section if the destination ns exists.

      This is not okay because it unconditionally releases the critical section on the destination ns, even if it is sharded. It could be that a migration is ongoing for the destination ns (because migrations have not been stopped yet, this happens later) and is in the middle of the critical section. Then rename tries to release it an hits this tassert.

            Assignee:
            Pierlauro Sciarelli
            Reporter:
            Jordi Serra Torrens
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: