SERVER-73385 Releasing unheld critical section upon sharded rename error must result in a no-op