jstests/concurrency/fsm_workloads/rename_sharded_collection.js
@@ -16,7 +16,6 @@
  *   does_not_support_add_remove_shards,
  *   # This test just performs rename operations that can't be executed in transactions
  *   does_not_support_transactions,
- *   # Can be removed once PM-1965-Milestone-1 is completed.
  *  ]
  */
 
